--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,17 @@
 /* GENERAL */
+a{
+    text-decoration: none;
+    color: white;
+}
+
+header .container-fluid{
+    height: 50px;
+}
+
+main .container-fluid{
+    height: calc(100vh - 50px)
+}
+
+main .container-fluid .row .col-auto{
+    height: calc(100vh - 50px);
+}
